--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://www.google.com/recaptcha/api.js?onload=onRecaptchaLoad&render=explicit" async defer></script>
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </body>
 </html>
